// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DomainStatusTag should render for blocked status 1`] = `
<Tooltip
  bottom={true}
  content="This domain is not available for use. For more information, please contact support."
  dark={true}
  forcePosition={false}
  horizontalOffset="0px"
  preferredDirection={
    Object {
      "bottom": true,
      "left": false,
      "right": true,
      "top": false,
    }
  }
  right={true}
>
  <Tag
    color="red"
  >
    <ErrorOutline
      size={15}
    />
    <span>
       Blocked
    </span>
  </Tag>
</Tooltip>
`;

exports[`Component: DomainStatusTag should render for pending status 1`] = `
<Tooltip
  bottom={true}
  content="This domain is pending review, please check back again soon."
  dark={true}
  forcePosition={false}
  horizontalOffset="0px"
  preferredDirection={
    Object {
      "bottom": true,
      "left": false,
      "right": true,
      "top": false,
    }
  }
  right={true}
>
  <Tag>
    <Schedule
      size={15}
    />
    <span>
       Pending
    </span>
  </Tag>
</Tooltip>
`;

exports[`Component: DomainStatusTag should render for unverified status 1`] = `
<Tooltip
  bottom={true}
  content="This domain must be verified before use."
  dark={true}
  forcePosition={false}
  horizontalOffset="0px"
  preferredDirection={
    Object {
      "bottom": true,
      "left": false,
      "right": true,
      "top": false,
    }
  }
  right={true}
>
  <Tag
    color="yellow"
  >
    <ErrorOutline
      size={15}
    />
    <span>
       Unverified
    </span>
  </Tag>
</Tooltip>
`;

exports[`Component: DomainStatusTag should render for verified status 1`] = `
<Tag>
  Verified
</Tag>
`;

exports[`Component: DomainStatusTag should render null without status 1`] = `""`;
